# simple

./: .clang-format  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  appveyor.yml  build-and-run  build-and-run-no-jieba  build-ios.sh  build-ohos.sh  build.bat  cpplint.cfg  example-jieba.sql  example.sql  main.cc  main.cpp  test.sql
.github/: codecov.yml
.github/ISSUE_TEMPLATE/: bug-反馈.md  bug_report.md  通用咨询.md  需求建议.md
.github/workflows/: main.yml
contrib/: CMakeRC.cmake  README.md  ios.toolchain.cmake  name.txt  pinyin-mini.txt  pinyin.txt
contrib/sqlite3/: CMakeLists.txt  FindReadline.cmake  LICENSE  README.md  sqlite3_config.h.in
examples/cpp/: CMakeLists.txt  main.cc
examples/go/: go.mod  main.go  run.sh
examples/node/: README.md  better-sqlite3.js  just-task.js  node-sqlite3.js  package-lock.json  package.json
examples/python3/: db_connector.py  journal.txt
src/: .gitignore  CMakeLists.txt  entry.cc  entry.h  pinyin.cc  pinyin.h  simple_def.h  simple_highlight.cc  simple_highlight.h  simple_tokenizer.cc  simple_tokenizer.h
test/: CMakeLists.txt  CMakeLists.txt.in  integration_test.cc  pinyin_test.cc  tokenizer_test.cc
